@@ -1,8 +1,8 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
+ *  Copyright (C) 1997--2017  The R Core Team
+ *  Copyright (C) 2003--2017  The R Foundation
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1997--2016  The R Core Team
- *  Copyright (C) 2003--2016  The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -194,7 +194,7 @@ FUNTAB R_FunTab[] = {
 
     {"length", do_length, 0, 1, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"length<-", do_lengthgets, 0, 1, 2, {PP_FUNCALL, PREC_LEFT, 1}},
-    {"c", /* bind.c:*/ do_c, 0, 1, -1, {PP_FUNCALL, PREC_FN, 0}},
+    {"c", /* bind.c: */ do_c, 0, 1, -1, {PP_FUNCALL, PREC_FN, 0}},
     {"oldClass", do_class, 0, 1, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"oldClass<-", do_classgets, 0, 1, 2, {PP_FUNCALL, PREC_LEFT, 1}},
     {"class", R_do_data_class, 0, 1, 1, {PP_FUNCALL, PREC_FN, 0}},
@@ -764,7 +764,7 @@ FUNTAB R_FunTab[] = {
     {"dir.exists", do_direxists, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"dir.create", do_dircreate, 0, 111, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"tempfile", do_tempfile, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
-    {"tempdir", do_tempdir, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
+    {"tempdir", do_tempdir, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"R.home", do_Rhome, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"date", do_date, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"Sys.getenv", do_getenv, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
